--- a/foundation/test0006/test0006.md
+++ b/foundation/test0006/test0006.md
@@ -1,7 +1,7 @@
 # 事件选项
 addEventListener的第三个参数为定制的选项，可传递object或boolean类型
 ## 下面是传递对象时的说明
-|  **选项**    | 可选参数    |       |
+|  **选项**    | **可选参数**|       |
 |  ----        | ----       | ----  |
 |  once        | true/false | 只执行一次事件 |
 |  capture     | true/false | 事件是在捕获/冒泡哪个阶段执行，true:捕获阶段 false:冒泡阶段 |
@@ -32,3 +32,18 @@ addEventListener的第三个参数为定制的选项，可传递object或boolean
 借助冒泡思路，我们可以不为子元素设置事件，而将事件设置在父级。然后通过父级事件对象的event.target查找子元素，并对他做出处理。
 * 这在为多个元素添加相同事件时很方便
 * 会使添加事件变得非常容易
+
+# 默认行为
+JS中有些对象会设置默认事件处理程序，比如A链接在点击时会进行跳转。  一般默认处理程序会在用户定义的处理程序后执行，所以我们可以在我们定义的事件处理中取消默认事件处理程序的执行。
+* 使用onclick绑定的事件处理程序，return false 可以阻止默认行为
+* 推荐使用event.preventDefault()阻止默认行为
+
+# 窗口文档
+## 事件类型
+|  **事件名**             | **说明**|
+|  ----                   | ----    |
+|  window.onload          | 文档解析及外部资源加载后 |
+|  DOMContentLoaded       | 文档解析后执行，不需要等待图片/样式文件等外部资源加载，该事件只能通过addEventListener设置 |
+|  window.beforeunload    | 文档刷新或关闭时 |
+|  window.unload          | 文档卸载时 |
+|  scroll                 | 页面滚动时 |
